--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,4 +2,6 @@
 //  Index imports
 // ======================================
 @import 'base/index';
-@import 'layout/container';
+//Check Order
+@import 'utilities/index';
+@import 'layout/index';
