--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,6 +1,4 @@
 // ======================================
-//  Layout Imports
+//  Utilities imports
 // ======================================
-@import 'normalize';
-@import 'typography';
-@import 'base';
+@import 'mixins';
