--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,8 +4,13 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-
-video {
-  display: block;
-  width:100%;
+body {
+  //text-align: center;
+}
+p {
+  line-height:1.5em;
+}
+p span {
+  padding-top:0.5em;
+  padding-bottom:0.5em;
 }
