--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,3 +14,7 @@ p span {
   padding-top:0.5em;
   padding-bottom:0.5em;
 }
+
+.mejs__controls:not([style*="display: none"]) {
+  background: linear-gradient(transparent,teal);
+}
