add loop to video, fix js events

--- a/css/style.css
+++ b/css/style.css
@@ -403,8 +403,7 @@ template {
   display: none; }
 
 .text-current {
-  color: orange;
-  padding: 0.5em; }
+  color: orange; }
 
 * {
   -webkit-box-sizing: border-box;
